--- a/rina/Javascript-cro-task/TRTL/TRTL-Travel-60/19-06-2024/v1-bk.css
+++ b/rina/Javascript-cro-task/TRTL/TRTL-Travel-60/19-06-2024/v1-bk.css
@@ -42,8 +42,8 @@ body.custBody {
   height: 35px;
 }
 
-/* .custToolbarWrapper li span img {
-} */
+.custToolbarWrapper li span img {
+}
 
 .custToolbarWrapper li span.custToolbarText {
   color: #fff;
