--- a/rina/Javascript-cro-task/TRTL/TRTL Travel125 Pre-Cart Upgrade Popup (2-Pack) UK/17-09-2024/v2.css
+++ b/rina/Javascript-cro-task/TRTL/TRTL Travel125 Pre-Cart Upgrade Popup (2-Pack) UK/17-09-2024/v2.css
@@ -1,59 +1,11 @@
-.custHideContent {
-    display: none!important;
-}
- .custShowContent{
-    display: block!important;
-}
-.custPreUpgradeProgress {
-    margin: 0 0 12px;
-}
-.custPreUpgradeProgress h6 {/* Expedited free shipping */
-    font-family: 'IBM Plex Mono';
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: #000000;
-    margin: 0 0 8px;
-}
-.custPreUpgradeProgress .custUpgradeRangeWraper {
-    display: block;
-    width: 100%;
-    position: relative;
-}
-.custPreUpgradeProgress .custUpgradeRangeWraper .blueBar, .custPreUpgradeProgress .custUpgradeRangeWraper span.greyBar {
-    display: block;
-    width: 100%;
-    background: #ccc;
-    border-radius: 8px;
-    height: 6px;
-}
-.custPreUpgradeProgress .custUpgradeRangeWraper  span.blueBar {
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: #243B60;
-}
-.custPreUpgradeProgress .custUpgradeRangeWraper span.rightBall {
-    display: block;
-    width: 16px;
-    height: 16px;
-    background: #ccc;
-    border-radius: 16px;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    z-index: 2;
-    margin-top: -8px;
-}
-.custBundleNDsaveWraper {
+.custBundleNDsaveWraperV2 {
     padding: 8px 10px;
     width: 100%;
     background: #FEF7E7;
     border: 1px solid #C5C4C5;
     border-radius: 4px;
 }
-.custBundleNDsaveWraper h6 {
+.custBundleNDsaveWraperV2 h6 {
     font-family: 'IBM Plex Sans';
     font-weight: 700;
     font-size: 14px;
@@ -62,16 +14,35 @@
     color: #292B2D;
     margin: 0 0 12px;
 }
-.custBundleNDsaveWraper h6 span {
+.custBundleNDsaveWraperV2 h6 span {
     color: #A21C23;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper {
+.custBundleNDsaveWraperV2 .custChooseItemImageWraper {
     display: flex;
     align-items: center;
     gap: 20px;
     margin: 0 0 12px;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper .itemContent .heading {
+.custBundleNDsaveWraperV2 .custChooseItemImageWraper .itemImage {
+    flex: 0 0 100px;
+}
+.custBundleNDsaveWraperV2 .custChooseItemImageWraper .itemContent ul {
+    padding: 0 0 0 18px;
+    font-family: 'IBM Plex Sans';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #000000;
+    margin: 0;
+}
+.custBundleNDsaveWraperV2 .custChooseItemImageWraper .itemContent ul li {
+    margin: 0 0 5px;
+}
+.custBundleNDsaveWraperV2 .custItemSizeSelection {
+    margin: 12px 0 0;
+}
+.custBundleNDsaveWraperV2 .custItemSizeSelection .heading {
     color: #87888a;
     font-size: 11px;
     line-height: 16px;
@@ -79,16 +50,20 @@
     margin-bottom: 10px;
     text-transform: uppercase;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper .itemContent .heading span.colorName {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .heading span.colorName {
     color: #000;
     display: inline-block;
     margin-left: 8px;
+    font-weight: 500;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper .itemContent .custColorSwatches {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .heading a.cursor-pointer {
+    font-weight: 500;
+}
+.custBundleNDsaveWraperV2 .custItemSizeSelection .custColorSwatches {
     display: flex;
     gap: 8px;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper .itemContent .custColorSwatches .swatch {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .custColorSwatches .swatch {
     border: 0px solid transparent;
     width: 30px;
     height: 30px;
@@ -100,7 +75,7 @@
     background-position: 50%;
     background-repeat: no-repeat;
 }
-.custBundleNDsaveWraper .custChooseItemImageWraper .itemContent .custColorSwatches .swatch.active:after {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .custColorSwatches .swatch.active:after {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -112,12 +87,33 @@
     background-repeat: no-repeat;
     content: '';
 }
-.custBundleNDsaveWraper  .custPricingWraper {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .custColorSwatches .swatch.swatch-color-sydney{
+    background-image: url(https://trtltravel.com/cdn/shop/files/IoILGQfA_100x.png?v=1668781142) !important;
+}
+.custBundleNDsaveWraperV2 .custItemSizeSelection .custColorSelect {
+    margin: 0 0 12px;
+}
+.custBundleNDsaveWraperV2 .custSizesWraper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin: 0 0 12px;
+}
+.custBundleNDsaveWraperV2 .custSizesWraper .btn.btn-outline-dark {
+    font-size: 15px;
+    line-height: 20px;
+    padding: 10px 20px;
+}
+.custBundleNDsaveWraperV2 .custSizesWraper .btn.btn-outline-dark.active{
+    background: #000;
+    color: #fff;
+}
+.custBundleNDsaveWraperV2  .custPricingWraper {
     display: flex;
     align-items: center;
     gap: 12px;
 }
-.custBundleNDsaveWraper .custPricingWraper .pricing .priceMain {
+.custBundleNDsaveWraperV2 .custPricingWraper .pricing .priceMain {
     display: flex;
     gap: 4px;
     font-family: 'IBM Plex Sans';
@@ -126,10 +122,10 @@
     line-height: 1.1;
     letter-spacing: 0.02em;
 }
-.custBundleNDsaveWraper .custPricingWraper .pricing .priceMain .finalPrice {
+.custBundleNDsaveWraperV2 .custPricingWraper .pricing .priceMain .finalPrice {
     color: #A21C23;
 }
-.custBundleNDsaveWraper .custPricingWraper .pricing .freeCarryBag {
+.custBundleNDsaveWraperV2 .custPricingWraper .pricing .freeCarryBag {
     font-family: 'IBM Plex Sans';
     font-weight: 450;
     font-size: 11px;
@@ -138,16 +134,23 @@
     text-transform: uppercase;
     color: #000000;
 }
-.custBundleNDsaveWraper .custPricingWraper .add-to-cart-button {
-    flex: 1;
+.custBundleNDsaveWraperV2 .custPricingWraper .pricing {
+    flex: auto;
+}
+.custBundleNDsaveWraperV2 .custItemSizeSelection .add-to-cart-button,
+.custBundleNDsaveWraperV2 .custPricingWraper .add-to-cart-button {
     text-transform: uppercase;
     font-family: 'IBM Plex Sans';
     font-weight: 500;
     font-size: 15px;
     line-height: 22px;
     letter-spacing: 0.06em;
+    padding: 10px 20px;
 }
-.custFreeCarryBagWraper {
+.custBundleNDsaveWraperV2 .custItemSizeSelection .add-to-cart-button{
+    width: 100%;
+}
+.custFreeCarryBagWraperV2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -158,12 +161,12 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
-.custFreeCarryBagWraper .imgBox {
+.custFreeCarryBagWraperV2 .imgBox {
     flex: 0 0 72px;
     border-radius: 4px;
     overflow: hidden;
 }
-.custFreeCarryBagWraper .content {
+.custFreeCarryBagWraperV2 .content {
     font-family: 'IBM Plex Sans';
     font-weight: 700;
     font-size: 13px;
@@ -171,7 +174,7 @@
     letter-spacing: 0.03em;
     color: #000000;
 }
-.custFreeCarryBagWraper .content span.value {
+.custFreeCarryBagWraperV2 .content span.value {
     font-weight: 400;
     font-style: italic;
 }
