--- a/rina/Javascript-cro-task/TRTL/TRTL Travel125 Pre-Cart Upgrade Popup (2-Pack) UK/17-09-2024/v1.css
+++ b/rina/Javascript-cro-task/TRTL/TRTL Travel125 Pre-Cart Upgrade Popup (2-Pack) UK/17-09-2024/v1.css
@@ -2,7 +2,7 @@
     display: none!important;
 }
  .custShowContent{
-    display: block!important;
+    display: flex!important;
 }
 .custPreUpgradeProgress {
     margin: 0 0 12px;
